--- a/src/app/Modals/crear-corresponsal/crear-corresponsal.component.html
+++ b/src/app/Modals/crear-corresponsal/crear-corresponsal.component.html
@@ -3,7 +3,11 @@
 
 <!-- Modal Dialog -->
 <div class="modal-dialog" *ngIf="isOpen" [@slideIn]>
-  <div class="modal-content">
+  <div class="modal-content"> 
+     <!-- Agrega esto arriba del formulario o donde prefieras -->
+  <div *ngIf="successMessage" class="alert alert-success">
+    {{ successMessage }}
+  </div>
     <!-- Modal Header -->
     <div class="modal-header">
       <h5 class="modal-title">Nuevo Proveedor o corresponsal</h5>
@@ -17,40 +21,40 @@
       <form (ngSubmit)="onSubmit()" #corresponsalForm="ngForm">
         <!-- Name Field -->
         <div class="form-group mb-4">
-          <label for="name" class="form-label">Nombre</label>
+          <label for="name" class="form-label">Nombre completo</label>
           <input 
             type="text" 
-            id="name"
-            name="name"
+            id="nombre completo"
+            name="nombre completo"
             class="form-control"
-            [(ngModel)]="corresponsalData.name"
-            placeholder="Ejemplo S.A."
+            [(ngModel)]="corresponsalData.nombre_completo"
+            placeholder="Nombre Completo"
             required>
         </div>
 
         <!-- Email Field -->
         <div class="form-group mb-4">
-          <label for="email" class="form-label">Correo electrónico</label>
+          <label for="nombre de usuario" class="form-label">Nombre de usuario</label>
           <input 
-            type="email" 
-            id="email"
-            name="email"
+            type="Nombre de usuario" 
+            id="Nombre de usuario"
+            name="nombre de usuario"
             class="form-control"
-            [(ngModel)]="corresponsalData.email"
-            placeholder="Correo@ejemplo.com"
+            [(ngModel)]="corresponsalData.nombre_usuario"
+            placeholder="FulatinoCorresponsal"
             required>
         </div>
 
         <!-- Phone Field -->
         <div class="form-group mb-4">
-          <label for="phone" class="form-label">Teléfono</label>
+          <label for="Contraseña" class="form-label">Contraseña</label>
           <input 
-            type="tel" 
-            id="phone"
-            name="phone"
+            type="Contraseña" 
+            id="Contraseña"
+            name="Contraseña"
             class="form-control"
-            [(ngModel)]="corresponsalData.phone"
-            placeholder="123-456-7890"
+            [(ngModel)]="corresponsalData.password"
+            placeholder="Contraseña"
             required>
         </div>
       </form>
