Agrega modal para subir archivos en el componente 'ver-referencia' y implementa la lógica de carga en el componente 'subir-archivos'.

--- a/src/app/Components/ver-referencia/ver-referencia.component.html
+++ b/src/app/Components/ver-referencia/ver-referencia.component.html
@@ -61,4 +61,7 @@
       </tbody>
     </table>
   </div>
+
+  <!-- Modal para subir archivos -->
+  <app-subir-archivos *ngIf="showModal" (close)="closeModal()"></app-subir-archivos>
 </div>
