--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -5,12 +5,11 @@
   </app-tool-bar>
 
   <div class="main-content">
+    <app-buscador-referencias></app-buscador-referencias>
+
     <div class="row mb-4 align-items-center">
-      <div class="col-md-6">
-        <h1 class="fw-bold text-primary mb-0">Panel Administrativo</h1>
-      </div>
-      <div class="col-md-6">
-        <app-buscador-referencias></app-buscador-referencias>
+      <div class="col-12">
+        <h1 class="fw-bold text-dark mb-0">Panel Administrativo</h1>
       </div>
     </div>
 
