--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -66,3 +66,10 @@
   *ngIf="showPasswordModal"
   (closeModal)="closePasswordModal()">
 </app-cambiar-contrasena>
+
+<!-- Modal para actualizar información -->
+<app-actualizar-informacion
+  *ngIf="showInfoModal"
+  (closeModal)="closeInfoModal()"
+  (infoUpdated)="onInfoUpdated()">
+</app-actualizar-informacion>
