ya enlista las referencias que existen y descargar los documentos de las referencias

--- a/src/app/Components/buscador-referencias/buscador-referencias.component.html
+++ b/src/app/Components/buscador-referencias/buscador-referencias.component.html
@@ -38,21 +38,25 @@
       class="reference-card"
     >
       <div class="reference-header">
-        <h3 class="reference-id">{{ reference.id }}</h3>
+        <h3 class="reference-id">{{ reference.referencia }}</h3>
       </div>
 
       <div class="reference-details">
         <div class="detail-row">
+          <span class="detail-label">Referencia:</span>
+          <span class="detail-value">{{ reference.referencia }}</span>
+        </div>
+        <div class="detail-row">
           <span class="detail-label">Fecha:</span>
-          <span class="detail-value">{{ reference.fecha }}</span>
+          <span class="detail-value">{{ reference.fecha_creacion }}</span>
         </div>
         <div class="detail-row">
-          <span class="detail-label">Eta:</span>
-          <span class="detail-value">{{ reference.eta }}</span>
+          <span class="detail-label">Creador:</span>
+          <span class="detail-value">{{ reference.creador_nombre }}</span>
         </div>
         <div class="detail-row">
-          <span class="detail-label">Cliente:</span>
-          <span class="detail-value">{{ reference.cliente }}</span>
+          <span class="detail-label">Estatus:</span>
+          <span class="detail-value">{{ reference.estatus_nombre }}</span>
         </div>
       </div>
 
