--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -27,8 +27,8 @@
           <span>{{ userData?.nombre_usuario }}</span>
         </div>
         <div class="info-item">
-          <i class="fas fa-id-badge icon"></i>
-          <span>ID: {{ userData?.id }}</span>
+          <i class="fas fa-envelope icon"></i>
+          <span>{{ userData?.correo_electronico }}</span>
         </div>
         <div class="info-item">
           <i class="fas fa-check-circle icon"></i>
