--- a/src/app/Components/buscador-referencias/buscador-referencias.component.html
+++ b/src/app/Components/buscador-referencias/buscador-referencias.component.html
@@ -55,7 +55,7 @@
           <span class="detail-value">{{ reference.creador_nombre }}</span>
         </div>
         <div class="detail-row">
-          <span class="detail-label">Estatus:</span>
+          <span class="detail-label">Estado:</span>
           <span class="detail-value">{{ reference.estatus_nombre }}</span>
         </div>
       </div>
