mismo estilo de boton de volver

--- a/src/app/Components/gestionar-roles/gestionar-roles.component.html
+++ b/src/app/Components/gestionar-roles/gestionar-roles.component.html
@@ -1,9 +1,10 @@
 <div class="container">
   <h2>Gestionar Roles</h2>
 
-    <button class="btn-volver" (click)="volver()">
-    <i class="fas fa-arrow-left"></i> Volver al inicio
-    </button>
+  <button class="btn-volver" (click)="volver()">
+    <i class="icon-arrow-left"></i>
+    Volver
+  </button>
 
   <div class="role-section">
     <h3>Crear Rol</h3>
