--- a/src/app/Components/monitorear-usuarios/monitorear-usuarios.component.html
+++ b/src/app/Components/monitorear-usuarios/monitorear-usuarios.component.html
@@ -1,8 +1,9 @@
 <div class="container">
   <!-- Botón Volver al inicio -->
   <div class="back-section">
-    <button class="btn-back" (click)="volver()">
-      <i class="fas fa-arrow-left"></i> Volver
+    <button class="btn-volver" (click)="volver()">
+      <i class="icon-arrow-left"></i>
+      Volver
     </button>
   </div>
 
