--- a/src/app/Components/ver-referencia/ver-referencia.component.html
+++ b/src/app/Components/ver-referencia/ver-referencia.component.html
@@ -64,7 +64,7 @@
   </div>
 
   <!-- Modal para subir archivos -->
-  <app-subir-archivos *ngIf="showModal" (close)="closeModal()"></app-subir-archivos>
+  <app-subir-archivos *ngIf="showModal" (close)="closeModal()" (upload)="onUpload($event)"></app-subir-archivos>
 
   <!-- Modal para ver documento -->
   <app-ver-documento
